app/globals.css
@import "tailwindcss";

@theme {
  --color-burgundy: #4a0e0e;
  --color-gold: #d4af37; /* buttons & CTA */
  --color-ivory: #f9f7f2; /* background */
  --color-charcoal: #2b2b2b; /* text */
  --color-placeholder: #c8c8c8; /* placeholder color */
  --color-secondary: #878787; /* secondary text color */
  --color-border: #eaeeef; /* border color */
  --animate-hero-in: hero-in 1200ms cubic-bezier(0.16, 1, 0.3, 1);
  --animate-fade-in: fadeIn 0.3s ease-in-out;
}

p,
h2,
h3,
h4,
h5,
h6,
a,
span,
label,
button,
td,
th {
  font-family: var(--font-inter);
}

h1,
h3 {
  font-family: var(--font-plex);
}

@layer components {
  .bottom-nav-link-style {
    @apply uppercase text-sm hover:text-burgundy cursor-pointer text-charcoal font-medium;
  }

  .about-social-media {
    @apply inline-flex items-center gap-2 hover:text-charcoal underline;
  }

  .slider-icons {
    @apply p-2 rounded-full bg-gold text-white hover:bg-gold disabled:opacity-30 disabled:cursor-not-allowed transition cursor-pointer;
  }

  .google-sso {
    @apply w-full cursor-pointer bg-white border border-gray-300 text-gray-700 font-medium py-3 px-4 rounded-full transition-colors flex items-center justify-center gap-2;
  }
}

/* Keyframes */
@keyframes hero-in {
  from {
    opacity: 0;
    transform: translateY(40px) scale(0.97);
  }
  to {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
}

@layer utilities {
  .animate-hero-in {
    animation: var(--animate-hero-in);
  }

  .animate-fadeIn {
    animation: var(--animate-fade-in);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes slide {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}

